export enum AlertStatus {
  New = 'Νέα',
  Read = 'Διαβασμένη',
  Resolved = 'Επιλυμένη'
}