import { Robot } from './Robot';

export class DataAnalytics {
  computeUptime(robot: Robot): number {
    // TODO: implement
    return 0;
  }

  computeEfficiency(robot: Robot): number {
    // TODO: implement
    return 0;
  }

  aggregateMetrics(): Record<string, number> {
    // TODO: implement
    return {};
  }
}