export enum ErrorType {
  Movement = 'Κίνηση',
  Communication = 'Επικοινωνία',
  Temperature = 'Θερμοκρασία',
  Other = 'Άλλο'
}