export enum NotificationType {
  Maintenance = 'Συντήρηση',
  Info = 'Ειδοποίηση',
  Error = 'Σφάλμα'
}