import { RobotStatus } from './RobotStatus';

export class RobotDiagnostics {
  constructor(
    public robotId: string,
    public motorCurrent: number,
    public temperature: number,
    public sensorHealth: Record<string, boolean>,
    public networkDelay: number,
    public diagnosticTimestamp: Date
  ) {}

  analyze(): Record<string, string> {
    // TODO: analyze readings
    return {};
  }

  generateReport(): string {
    // TODO: generate textual report
    return '';
  }
}