export enum RobotStatus {
  Operational = 'Λειτουργικό',
  Diagnosing = 'ΣεΔιάγνωση',
  Offline = 'ΕκτόςΛειτουργίας'
}