export enum TaskCategory {
  Transfer = 'Μεταφορά',
  Reposition = 'Επανατοποθέτηση',
  Inspection = 'Έλεγχος',
  Cleaning = 'Καθαρισμός'
}

export enum TaskStatus {
  Pending = 'Αναμονή',
  InProgress = 'ΣεΕκτέλεση',
  Completed = 'Ολοκληρωμένη'
}